Pruebas + Act. GUI y Player
Botones funcionales!
A espera de terminar la Persistencia, los botones "Play/Pause", "Siguiente" y "Anterior" pasan las pruebas.
La reproducción al hacer doble click en un elemento de la lista ya funciona.

Faltan:
-Perfilar la implementación del método para recibir listas
-Dar funcionalidad a la barra de volumen
-Decidir qué hacer con la barra de progreso.

-Cuando hagamos lo del Podcast seguramente habrá que revisar el método de reproducción, pero no estoy seguro.

--- a/cliente/GUI.form
+++ b/cliente/GUI.form
@@ -155,6 +155,9 @@
             <Property name="toolTipText" type="java.lang.String" value="Lista de Canciones"/>
             <Property name="autoscrolls" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listaCancionesMouseClicked"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
